Added titles to histogram plots

--- a/Visualisations.ipynb
+++ b/Visualisations.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Qualtrics data was exported in _CSV_ format."
+    "The Qualtrics data was exported in _CSV_ format and saved in the _data_ directory."
    ]
   },
   {
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "qualtricsUnionWaves = pandas.read_csv(dataFileQualtrics, sep=\",\", header=[0,1,2], dtype={'Duration (in seconds)': int})\n",
-    "qualtricsUnionWaves.head(4)"
+    "qualtricsUnionWaves.head(3)"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "qualtricsUnionWaves.columns = qualtricsUnionWaves.columns.droplevel([1, 2])\n",
-    "qualtricsUnionWaves"
+    "qualtricsUnionWaves.head(3)"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start by listing all participants who showed up in the first wave."
+    "Let's start by listing hashed email addresses of all participants who showed up in the first wave."
    ]
   },
   {
@@ -411,7 +411,7 @@
    "outputs": [],
    "source": [
     "qualtricsIdMap = dataFrameQualtrics[[\"idRcvd_1\", \"idRcvd_2\"]]\n",
-    "qualtricsIdMap.head(4)"
+    "qualtricsIdMap.head(5)"
    ]
   },
   {
@@ -490,8 +490,7 @@
    "outputs": [],
    "source": [
     "ax = countNansQualtricsIntersectionWaves.plot(kind=\"bar\", figsize=(15,5), legend=False)\n",
-    "ax.set_ylabel('NaNs')\n",
-    "ax.set_title('Number of NaN responses per question')\n",
+    "ax.set(ylabel=\"NaNs\", title=\"Number of NaN responses per question\")\n",
     "ax"
    ]
   },
@@ -526,8 +525,7 @@
    "outputs": [],
    "source": [
     "ax = countNansPerPersonQualtricsIntersectionWaves.plot(kind=\"bar\", figsize=(15,5), legend=False)\n",
-    "ax.set_ylabel('NaNs')\n",
-    "ax.set_title('Number of NaN responses per person')\n",
+    "ax.set(ylabel=\"NaNs\", title=\"Number of NaN responses per person\")\n",
     "ax"
    ]
   },
@@ -562,8 +560,7 @@
    "outputs": [],
    "source": [
     "ax = durationPerPersonQualtrics.plot(kind=\"bar\", figsize=(15,5), legend=False)\n",
-    "ax.set_ylabel('Time in seconds')\n",
-    "ax.set_title('Duration per person')\n",
+    "ax.set(ylabel=\"Time in seconds\", title=\"Duration per person\")\n",
     "ax"
    ]
   },
@@ -700,7 +697,7 @@
    "source": [
     "participantsBothDataFramesFirstWave = participantsBothDataFrames.intersection(qualtricsIdListFirstWave)\n",
     "participantsBothDataFramesSecondWave = participantsBothDataFrames.intersection(qualtricsIdListSecondWave)\n",
-    "participantsBothDataFramesBothWaves = participantsBothDataFrames.intersection(qualtricsIdListUnionWaves)"
+    "participantsBothDataFramesUnionWaves = participantsBothDataFrames.intersection(qualtricsIdListUnionWaves)"
    ]
   },
   {
@@ -750,8 +747,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "passiveDataKitBothWaves = dataFramePassiveDataKit.loc[participantsBothDataFrames]\n",
-    "passiveDataKitBothWaves.head(3)"
+    "passiveDataKitUnionWaves = dataFramePassiveDataKit.loc[participantsBothDataFramesUnionWaves]\n",
+    "passiveDataKitUnionWaves.head(3)"
    ]
   },
   {
@@ -824,7 +821,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(browsingHistoryTimeRange/60/60/24).hist().get_figure().savefig(\"figures/BrowsingHistoryTimeRange.png\")"
+    "(browsingHistoryTimeRange/60/60/24).plot(kind='hist',title='Browsing history time range').get_figure().savefig(\"figures/BrowsingHistoryTimeRange.png\")"
    ]
   },
   {
@@ -840,7 +837,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countUrlsPerPersonPassiveDataKit = passiveDataKitBothWaves.groupby(['Source'])['URL'].count()"
+    "countUrlsPerPersonPassiveDataKit = passiveDataKitUnionWaves.groupby(['Source'])['URL'].count()"
    ]
   },
   {
@@ -856,7 +853,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countUrlsPerPersonPassiveDataKit.hist().get_figure().savefig(\"figures/CountUrlsPerPerson.png\")"
+    "countUrlsPerPersonPassiveDataKit.plot(kind='hist',title='URL\\'s per person').get_figure().savefig(\"figures/CountUrlsPerPerson.png\")"
    ]
   },
   {
@@ -968,7 +965,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countUrlsPassiveDataKitBetweenWaves.hist().get_figure().savefig(\"figures/CountUrlsBetweenWaves.png\")"
+    "countUrlsPassiveDataKitBetweenWaves.plot(kind='hist',title='URL\\'s per person between waves').get_figure().savefig(\"figures/CountUrlsBetweenWaves.png\")"
    ]
   },
   {
@@ -1024,7 +1021,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countUrlsAndTimeBetweenWaves[\"UrlsPerDay\"].hist().get_figure().savefig(\"figures/CountUrlsPerDayBetweenWaves.png\")"
+    "countUrlsAndTimeBetweenWaves[\"UrlsPerDay\"].plot(kind='hist',title='URL\\'s per person per day').get_figure().savefig(\"figures/CountUrlsPerDayBetweenWaves.png\")"
    ]
   },
   {
