Added count of visitOrigin

--- a/Visualisations.ipynb
+++ b/Visualisations.ipynb
@@ -613,7 +613,16 @@
    "outputs": [],
    "source": [
     "dataFramePassiveDataKit = dataFramePassiveDataKit.set_index(\"Source\")\n",
-    "dataFramePassiveDataKit.head(3)"
+    "dataFramePassiveDataKit.head(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataFramePassiveDataKit[\"Generator\"].unique()"
    ]
   },
   {
@@ -1284,6 +1293,28 @@
     "countNewsUrlsFirstWave = countNewsUrlsFirstWave.rename(columns={\"URL\": \"Count News\"})\n",
     "countNewsUrlsFirstWave.to_csv(\"tables\\CountNewsFirstWave.csv\")\n",
     "countNewsUrlsFirstWave.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For participants who used the standalone version of Web Historian, the _visitOrigin_ is also recorded. This indicates which device was used to open the URL. Let's examine how many different devices most users have."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "if 'visitOrigin' in passiveDataKitFirstWave:\n",
+    "    countDevicesFirstWave = passiveDataKitFirstWave.groupby(['Source'])['visitOrigin'].nunique().to_frame()\n",
+    "    countDevicesFirstWave = countDevicesFirstWave.rename(columns={\"visitOrigin\": \"Count Devices\"})\n",
+    "    countDevicesFirstWave.to_csv(\"tables\\CountDevicesFirstWave.csv\")\n",
+    "    countDevicesFirstWave.head(3)"
    ]
   },
   {
