Added a count of devices per participant and per browser

--- a/Visualisations.ipynb
+++ b/Visualisations.ipynb
@@ -568,6 +568,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's see what _browser_ our participants use on their desktop or laptop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qualtricsHeader[[\"Q73_2\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qualtricsSecondWave[[\"Q73_2_2\"]].groupby(\"Q73_2_2\")[[\"Q73_2_2\"]].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see what _browser_ our participants use on their mobile phone."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qualtricsHeader[[\"Q73_1\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qualtricsSecondWave[[\"Q73_1_2\"]].groupby(\"Q73_1_2\")[[\"Q73_1_2\"]].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Passive Data Kit"
    ]
   },
@@ -765,6 +815,26 @@
    "metadata": {},
    "source": [
     "### Simple Metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our participants use various _OS's_ and various _browsers_. They are recorded by _Web Historian_ using the _navigator.userAgent_ property. Let's tally the options observed in the data. Note that many browsers, like _Chrome_, will generate a long string with [multiple](https://security.stackexchange.com/questions/126407/why-does-chrome-send-four-browsers-in-the-user-agent-header) browser names. Perhaps a better method of browser detection is via the _Qualtrics_ survey, as analysed in the previous section."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "passiveDataKitGeneratorFirstWave = passiveDataKitFirstWave.groupby(['Source'])[['Generator']].first()\n",
+    "passiveDataKitGeneratorFirstWave['Generator'] = passiveDataKitGeneratorFirstWave['Generator'].str.replace('Web Historian - Community Editie/[0-9]\\.[0-9] ', '', regex=True)\n",
+    "passiveDataKitGeneratorFirstWave.groupby(['Generator'])[['Generator']].count()"
    ]
   },
   {
@@ -1129,7 +1199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countNOSUrlsBetweenWaves = dataFramePassiveDataKitBetweenWaves[isNOSUrl].groupby(['Source'])['URL'].count().to_frame()\n",
+    "countNOSUrlsBetweenWaves = dataFramePassiveDataKitBetweenWaves[isNOSUrl].groupby(['Source'])[['URL']].count()\n",
     "countNOSUrlsBetweenWaves = countNOSUrlsBetweenWaves.rename(columns={\"URL\": \"Count nos.nl\"})\n",
     "countNOSUrlsBetweenWaves.to_csv(\"tables\\CountNOSBetweenWaves.csv\")\n",
     "countNOSUrlsBetweenWaves.head(3)"
@@ -1164,7 +1234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countGuardianUrlsBetweenWaves = dataFramePassiveDataKitBetweenWaves[isGuardianUrl].groupby(['Source'])['URL'].count().to_frame()\n",
+    "countGuardianUrlsBetweenWaves = dataFramePassiveDataKitBetweenWaves[isGuardianUrl].groupby(['Source'])[['URL']].count()\n",
     "countGuardianUrlsBetweenWaves = countGuardianUrlsBetweenWaves.rename(columns={\"URL\": \"Count The Guardian\"})\n",
     "countGuardianUrlsBetweenWaves.to_csv(\"tables\\CountTheGuardianBetweenWaves.csv\")\n",
     "countGuardianUrlsBetweenWaves.head(3)"
@@ -1201,7 +1271,7 @@
    },
    "outputs": [],
    "source": [
-    "countFacebookUrlsBetweenWaves = dataFramePassiveDataKitBetweenWaves[isFacebookUrl].groupby(['Source'])['URL'].count().to_frame()\n",
+    "countFacebookUrlsBetweenWaves = dataFramePassiveDataKitBetweenWaves[isFacebookUrl].groupby(['Source'])[['URL']].count()\n",
     "countFacebookUrlsBetweenWaves = countFacebookUrlsBetweenWaves.rename(columns={\"URL\": \"Count Facebook\"})\n",
     "countFacebookUrlsBetweenWaves.to_csv(\"tables\\CountFacebookBetweenWaves.csv\")\n",
     "countFacebookUrlsBetweenWaves.head(3)"
@@ -1259,7 +1329,7 @@
    },
    "outputs": [],
    "source": [
-    "countNewsUrlsBetweenWaves = dataFramePassiveDataKitBetweenWaves[isNewsUrl].groupby(['Source'])['URL'].count().to_frame()\n",
+    "countNewsUrlsBetweenWaves = dataFramePassiveDataKitBetweenWaves[isNewsUrl].groupby(['Source'])[['URL']].count()\n",
     "countNewsUrlsBetweenWaves = countNewsUrlsBetweenWaves.rename(columns={\"URL\": \"Count News\"})\n",
     "countNewsUrlsBetweenWaves.to_csv(\"tables\\CountNewsBetweenWaves.csv\")\n",
     "countNewsUrlsBetweenWaves.head(3)"
@@ -1289,7 +1359,7 @@
    },
    "outputs": [],
    "source": [
-    "countNewsUrlsFirstWave = passiveDataKitFirstWave[isNewsUrlFirstWave].groupby(['Source'])['URL'].count().to_frame()\n",
+    "countNewsUrlsFirstWave = passiveDataKitFirstWave[isNewsUrlFirstWave].groupby(['Source'])[['URL']].count()\n",
     "countNewsUrlsFirstWave = countNewsUrlsFirstWave.rename(columns={\"URL\": \"Count News\"})\n",
     "countNewsUrlsFirstWave.to_csv(\"tables\\CountNewsFirstWave.csv\")\n",
     "countNewsUrlsFirstWave.head(3)"
@@ -1310,11 +1380,32 @@
    },
    "outputs": [],
    "source": [
-    "if 'visitOrigin' in passiveDataKitFirstWave:\n",
-    "    countDevicesFirstWave = passiveDataKitFirstWave.groupby(['Source'])['visitOrigin'].nunique().to_frame()\n",
-    "    countDevicesFirstWave = countDevicesFirstWave.rename(columns={\"visitOrigin\": \"Count Devices\"})\n",
-    "    countDevicesFirstWave.to_csv(\"tables\\CountDevicesFirstWave.csv\")\n",
-    "    countDevicesFirstWave.head(3)"
+    "countDevicesPerParticipantSecondWave = passiveDataKitSecondWave.groupby(['Source'])[['visitOrigin']].nunique()\n",
+    "countDevicesPerParticipantSecondWave = countDevicesPerParticipantSecondWave.rename(columns={\"visitOrigin\": \"Count Devices per Participant\"})\n",
+    "countDevicesPerParticipantSecondWave.to_csv(\"tables\\countDevicesPerParticipantSecondWave.csv\")\n",
+    "countDevicesPerParticipantSecondWave.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's also examine how many different devices are common depending on the browser type. We first need to join the browser information from the _Qualtrics_ data. This is only available for the second wave."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "countDevicesPerBrowserSecondWave = pandas.concat([dataFrameQualtrics.loc[participantsIntersectionWaves].set_index(\"idRcvd_2\")[[\"Q73_2_2\"]], countDevicesPerParticipantSecondWave], axis=1, sort=False)\n",
+    "countDevicesPerBrowserSecondWave = countDevicesPerBrowserSecondWave.groupby(['Q73_2_2'])[[\"Count Devices per Participant\"]].max()\n",
+    "countDevicesPerBrowserSecondWave = countDevicesPerBrowserSecondWave.rename(columns={\"Count Devices per Participant\": \"Count Devices per Browser\"})\n",
+    "countDevicesPerBrowserSecondWave.to_csv(\"tables\\countDevicesPerBrowserSecondWave.csv\")\n",
+    "countDevicesPerBrowserSecondWave.head(3)"
    ]
   },
   {
